# TokidolRankingOCREngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OCRServer.cpp  README.md  TerminateManager.cpp
.circleci/: config.yml
OCR/: OCREngine.cpp  OCREngine.hpp  OCRMain.cpp  OCRMain.hpp  OCRReadInfo.hpp
Trimming/: HttpException.hpp  ImageInfo.cpp  ImageInfo.hpp  Rect.hpp  TrimmingMain.cpp  TrimmingMain.hpp
systemd/: ocrengine
